Mi Mär 11 17:21:07 CET 2009 Guido Günther <agx@sigxcpu.org>

	silence compiler warnings
	* src/krb5-auth-{applet,dialog,gconf,pwdialog}.[ch]: mark unused
	  parameters as G_GNUC_UNUSED or drop them, add missing void to
	  prototypes

Mi Mär 11 17:19:02 CET 2009 Guido Günther <agx@sigxcpu.org>

	add more compiler warnings
	* acinclude.m4: add KA_COMPILE_WARNINGS
	* compiler-flags.m4: add gl_COMPILER_FLAGS to test compiler options
	* configure.ac: call KA_COMPILE_WARNINGS and add WARN_CFLAGS to CFLAGS

Mi Mär 11 17:10:11 CET 2009 Guido Günther <agx@sigxcpu.org>

	push the dialog into the foreground and grab the keyboard so we make
	sure the user gets to see the dialog in all cases (e.g. when an app is
	requesting the TGT via dbus). Grab the keyboard so the user doesn't
	type the password somewhere else. Code mostly taken from gnome
	keyrings's gkr-ask-tool.c.
	* src/krb5-auth-pwdialog.c (grab_keyboard, ungrab_keyboard,
	  window_state_changed): new functions
	  (ka_pwdialog_run): use these

Mi Mär 11 17:04:03 CET 2009 Guido Günther <agx@sigxcpu.org>

	add a pwdialog gobject - remove lots of duplicate code and splits most
	of the password dialog handling into its own file
	* src/krb5-auth-applet.[ch]: move dialog handling from
	here...
	* src/krb5-auth-dialog.[ch]: ..and here...
	* src/krb5-auth-pwdialog.[ch]: ... to here - new files.
	* src/krb5-auth-dialog.glade: rename krb5_wrong_label to
	krb5_status_label
	* po/POTFILES.in, src/Makefile.am: add src/krb5-auth-pwdialog.c

Sat Feb 28 16:41:54 CET 2009 Guido Günther <agx@sigxcpu.org>

	add DBus interface to acquire TGT
	* src/krb5-auth-dbus.[ch] (ka_dbus_acquire_tgt, ka_dbus_service): new
	  functions
	* src/Makefile.am: generate krb5-auth-applet-dbus-glue.h via
	  dbus-binding-tool
	* src/krb5-auth-applet-dbus.xml: new file
	* README: example dbus call

Sat Feb 28 16:35:45 CET 2009 Guido Günther <agx@sigxcpu.org>

	* src/krb5-auth-applet.[ch] (ka_check_credentials): new function to